--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 actix-cors = "0.7.0"
 actix-web = "4.5.1"
 chrono = "0.4.38"
+env_logger = "0.11.3"
 jsonwebtoken = "9.3.0"
 serde = { version = "1.0.199", features = ["derive"] }
